crates/taut-rpc-macros/tests/ui/rpc-on-self-method-fail.rs
use taut_rpc::rpc;

struct Foo;

impl Foo {
    #[rpc]
    async fn bar(&self) -> u32 {
        0
    }
}

fn main() {}
